<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="co.ke.daletsys.azyma.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="co.ke.daletsys.azyma.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />


    <!--<fragment
            android:id="@+id/navigation_notifications"
            android:name="co.ke.daletsys.azyma.ui.notifications.NotificationsFragment"
            android:label="@string/title_notifications"
            tools:layout="@layout/fragment_notifications" />-->

    <fragment
        android:id="@+id/navigation_conversations"
        android:name="co.ke.daletsys.azyma.ui.Conversations"
        android:label="@string/title_conversations"
        tools:layout="@layout/fragment_conversations" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="co.ke.daletsys.azyma.ui.profile.Profile"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>