<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/legend"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/legend"
        app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/footer" />

    <TextView
        android:id="@+id/textEmailReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/email_registration"
        android:textColor="@color/dark"
        android:textSize="25sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/relLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="16dp"
                android:layout_weight="5"
                android:letterSpacing="0.08"
                android:text="Registration"
                android:textSize="25sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:background="@drawable/edittext">

                    <TextView
                        android:id="@+id/tEmail"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_margin="6dp"
                        android:gravity="center_vertical"
                        android:paddingStart="3dp"
                        android:paddingLeft="3dp"
                        android:text="Email"
                        android:textSize="@dimen/txtBook"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintHeight_default="wrap"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintWidth_default="wrap" />

                    <EditText
                        android:id="@+id/input_email"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginLeft="4dp"
                        android:background="@null"
                        android:hint="@string/prompt_email"
                        android:textColorHint="@color/pale.a"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:lines="1"
                        android:maxLength="64"
                        android:maxLines="1"
                        android:padding="4dp"
                        android:textSize="@dimen/txtBig"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toRightOf="@id/tEmail"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:background="@drawable/edittext">

                    <TextView
                        android:id="@+id/tPass"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_margin="6dp"
                        android:layout_marginLeft="24dp"
                        android:gravity="center_vertical"
                        android:paddingStart="3dp"
                        android:paddingLeft="3dp"
                        android:text="Password"
                        android:textSize="@dimen/txtBook"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintHeight_default="wrap"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintWidth_default="wrap" />

                    <EditText
                        android:id="@+id/input_password"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginLeft="4dp"
                        android:background="@null"
                        android:hint="@string/password"
                        android:textColorHint="@color/pale.a"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:lines="1"
                        android:maxLength="12"
                        android:maxLines="1"
                        android:padding="4dp"
                        android:textSize="@dimen/txtBig"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toRightOf="@id/tPass"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:background="@drawable/edittext">

                    <TextView
                        android:id="@+id/tPassCon"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_margin="6dp"
                        android:gravity="center_vertical"
                        android:paddingStart="3dp"
                        android:paddingLeft="3dp"
                        android:text="Confirm"
                        android:textSize="@dimen/txtBook"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintHeight_default="wrap"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintWidth_default="wrap" />

                    <EditText
                        android:id="@+id/input_confirm_password"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginLeft="4dp"
                        android:background="@null"
                        android:hint="@string/confirm_password"
                        android:textColorHint="@color/pale.a"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:lines="1"
                        android:maxLength="12"
                        android:maxLines="1"
                        android:padding="4dp"
                        android:textSize="@dimen/txtBig"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toRightOf="@id/tPassCon"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/input_confirm_password"
                android:layout_marginTop="12dp"
                android:background="@drawable/button_ga"
                android:text="@string/register"
                android:textColor="@color/white" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:visibility="invisible" />

</RelativeLayout>